--- a/packages/server/locales/id.json
+++ b/packages/server/locales/id.json
@@ -1,7 +1,7 @@
 {
 	"Not found": "Tidak ditemukan",
 	"Page not found": "Halaman tidak ditemukan",
-	"Incorrect user or password": "pengguna atau password salah ketik",
+	"Incorrect user or password": "pengguna atau kata sandi salah ketik",
 	"Internal Error": "Internal Error",
 	"A report has been logged and a team of bug-squashing squirrels has been dispatched to deal with the situation.": "Laporan telah dicatat dan dikirim, tim pembasmi bug telah dikirim untuk menangani situasi ini.",
 	"User": "Pengguna",
@@ -37,50 +37,50 @@
 	"User %s saved": "Pengguna %s telah disimpan",
 	"User %s deleted": "Pengguna %s telah dihapus",
 	"E-mail": "E-mail",
-	"Password": "Password",
+	"Password": "Kata sandi",
 	"User settings": "Pengaturan pengguna",
 	"Password reset not enabled. Contact your administrator.": "Penyetelan ulang kata sandi tidak diaktifkan. Hubungi administrator Anda.",
-	"Reset password": "Reset password",
+	"Reset password": "Pengaturan ulang Kata sandi",
 	"Enter your email address below and we'll send you a link to reset your password.": "Masukkan alamat email Anda di bawah dan kami akan mengirimkan Anda tautan untuk mengatur ulang kata sandi Anda.",
 	"Enter your new password below": "Masukkan kata sandi baru Anda di bawah ini",
-	"Set password": "Atur password",
+	"Set password": "Atur Kata sandi",
 	"Password reset. Log in with your new password": "Penyetelan ulang kata sandi. Masuk dengan kata sandi baru Anda",
 	"Change": "Mengubah",
-	"Old password": "Password lama",
-	"New password": "Password baru",
+	"Old password": "Kata sandi lama",
+	"New password": "Kata sandi baru",
 	"Email: ": "Email: ",
-	"Change password": "Ubah password",
-	"Password changed": "Password sudah berubah",
+	"Change password": "Ubah Kata sandi",
+	"Password changed": "Kata sandi Anda sudah berubah",
 	"Reset password instructions": "Instruksi setel ulang kata sandi",
 	"Hi %s": "Halo %s",
-	"You have requested a link to change your password. You can do this through this link:": "You have requested a link to change your password. You can do this through this link:",
-	"If you did not request this, please ignore this email.": "If you did not request this, please ignore this email.",
-	"Your password will not change until you access the link above and set a new one.": "Your password will not change until you access the link above and set a new one.",
-	"Change my password": "Change my password",
-	"Must be admin": "Must be admin",
-	"Site identity": "Site identity",
-	"Authentication": "Authentication",
-	"Development": "Development",
-	"Edit": "Edit",
-	"Unknown file": "Unknown file",
-	"Other": "Other",
-	"Edit configuration key %s": "Edit configuration key %s",
-	"Configuration key %s saved": "Configuration key %s saved",
-	"Configuration key %s deleted": "Configuration key %s deleted",
-	"Must be logged in first": "Must be logged in first",
-	"Hello": "Hello",
-	"Restart server. Try reloading the page after a few seconds after pressing this button.": "Restart server. Try reloading the page after a few seconds after pressing this button.",
-	"Restart": "Restart",
-	"Backup": "Backup",
-	"Restore": "Restore",
-	"Not authorized": "Not authorized",
-	"Page %s not found": "Page %s not found",
-	"Warning": "Warning",
-	"Hosting on this site is provided for free and with no guarantee of availability or security of your application. ": "Hosting on this site is provided for free and with no guarantee of availability or security of your application. ",
-	"This facility is intended solely for you to evaluate the suitability of Saltcorn. ": "This facility is intended solely for you to evaluate the suitability of Saltcorn. ",
-	"If you would like to store private information that needs to be secure, please use self-hosted Saltcorn. ": "If you would like to store private information that needs to be secure, please use self-hosted Saltcorn. ",
-	"Create application": "Create application",
-	"Create": "Create",
+	"You have requested a link to change your password. You can do this through this link:": "Anda telah meminta tautan untuk mengubah kata sandi Anda. Anda dapat melakukannya melalui tautan ini:",
+	"If you did not request this, please ignore this email.": "Jika Anda tidak memintanya, harap abaikan email ini.",
+	"Your password will not change until you access the link above and set a new one.": "Kata sandi Anda tidak akan berubah sampai Anda mengakses tautan di atas dan membuat kata sandi baru.",
+	"Change my password": "Ubah kata sandi saya",
+	"Must be admin": "Harus admin",
+	"Site identity": "Identitas situs",
+	"Authentication": "Autentikasi",
+	"Development": "Pengembangan",
+	"Edit": "Sunting",
+	"Unknown file": "Berkas tidak dikenal",
+	"Other": "Lainnya",
+	"Edit configuration key %s": "Edit kunci konfigurasi %s",
+	"Configuration key %s saved": "Kunci konfigurasi %s tersimpan",
+	"Configuration key %s deleted": "Kunci konfigurasi %s dihapus",
+	"Must be logged in first": "Harus login terlebih dahulu",
+	"Hello": "Halo",
+	"Restart server. Try reloading the page after a few seconds after pressing this button.": "Mulai ulang server. Coba muat ulang halaman setelah beberapa detik setelah menekan tombol ini.",
+	"Restart": "Mengulang kembali",
+	"Backup": "Cadangan",
+	"Restore": "Memulihkan",
+	"Not authorized": "Tidak diizinkan",
+	"Page %s not found": "Halaman %s tidak ditemukan",
+	"Warning": "Peringatan",
+	"Hosting on this site is provided for free and with no guarantee of availability or security of your application. ": "Hosting di situs ini disediakan secara gratis dan tidak ada jaminan ketersediaan atau keamanan aplikasi Anda. ",
+	"This facility is intended solely for you to evaluate the suitability of Saltcorn. ": "Fasilitas ini ditujukan semata-mata agar Anda dapat mengevaluasi kesesuaian Saltcorn.",
+	"If you would like to store private information that needs to be secure, please use self-hosted Saltcorn. ": "Jika Anda ingin menyimpan informasi pribadi yang perlu diamankan, silakan gunakan Saltcorn yang dihosting sendiri. ",
+	"Create application": "Buat Aplikasi",
+	"Create": "Membuat",
 	"Please select a name for your application. The name will determine the address at which it will be available. ": "Please select a name for your application. The name will determine the address at which it will be available. ",
 	"Application name": "Application name",
 	"Success! Your new application is available at:": "Success! Your new application is available at:",
