--- a/packages/server/locales/id.json
+++ b/packages/server/locales/id.json
@@ -81,50 +81,50 @@
 	"If you would like to store private information that needs to be secure, please use self-hosted Saltcorn. ": "Jika Anda ingin menyimpan informasi pribadi yang perlu diamankan, silakan gunakan Saltcorn yang dihosting sendiri. ",
 	"Create application": "Buat Aplikasi",
 	"Create": "Membuat",
-	"Please select a name for your application. The name will determine the address at which it will be available. ": "Please select a name for your application. The name will determine the address at which it will be available. ",
-	"Application name": "Application name",
-	"Success! Your new application is available at:": "Success! Your new application is available at:",
-	"Please click the above link now to create the first user.": "Please click the above link now to create the first user.",
-	"A site with this subdomain already exists": "A site with this subdomain already exists",
-	"No such view: %s": "No such view: %s",
-	"Search all tables": "Search all tables",
-	"Show": "Show",
-	"When": "When",
-	"Tenant": "Tenant",
-	"Crash log entry %s": "Crash log entry %s",
-	"New %s": "New %s",
+	"Please select a name for your application. The name will determine the address at which it will be available. ": "Silakan pilih nama untuk aplikasi Anda. Nama akan menentukan alamat ketersediaannya. ",
+	"Application name": "Nama aplikasi",
+	"Success! Your new application is available at:": "Berhasil! Aplikasi baru Anda tersedia di:",
+	"Please click the above link now to create the first user.": "Silakan klik tautan di atas sekarang untuk membuat pengguna pertama.",
+	"A site with this subdomain already exists": "Situs dengan subdomain ini sudah ada",
+	"No such view: %s": "Tidak ada tinjauan seperti itu: %s",
+	"Search all tables": "Cari semua tabel",
+	"Show": "Tampilkan",
+	"When": "Kapan",
+	"Tenant": "Penyewa",
+	"Crash log entry %s": "Entri log kerusakan %s",
+	"New %s": "Baru %s",
 	"Data": "Data",
-	"Add row": "Add row",
-	"Add %s": "Add %s",
-	"Edit row": "Edit row",
-	"Edit %s": "Edit %s",
-	"No errors reported": "No errors reported",
-	"Everything is going extremely well.": "Everything is going extremely well.",
-	"Filename": "Filename",
-	"Size (KiB)": "Size (KiB)",
-	"Media type": "Media type",
-	"Role to access": "Role to access",
-	"Link": "Link",
-	"Download": "Download",
-	"Upload file ": "Upload file ",
-	"Minimum role for %s updated to %s": "Minimum role for %s updated to %s",
-	"File %s deleted": "File %s deleted",
-	"More...": "More...",
-	"Quick Start": "Quick Start",
-	"Four different ways to get started using Saltcorn": "Four different ways to get started using Saltcorn",
-	"Build": "Build",
-	"Start by creating the tables to hold your data": "Start by creating the tables to hold your data",
-	"Create a table »": "Create a table »",
-	"When you have created the tables, you can create views so users can interact with the data.": "When you have created the tables, you can create views so users can interact with the data.",
-	"You can also start by creating a page.": "You can also start by creating a page.",
-	"Create a page »": "Create a page »",
-	"Upload": "Upload",
-	"You can skip creating a table by hand by uploading a CSV file from a spreadsheet.": "You can skip creating a table by hand by uploading a CSV file from a spreadsheet.",
-	"Create table with CSV upload": "Create table with CSV upload",
-	"If you have a backup from a previous Saltcorn instance, you can also restore it.": "If you have a backup from a previous Saltcorn instance, you can also restore it.",
-	"Install pack": "Install pack",
-	"Instead of building, get up and running in no time with packs": "Instead of building, get up and running in no time with packs",
-	"Packs are collections of tables, views and plugins that give you a full application which you can then edit to suit your needs.": "Packs are collections of tables, views and plugins that give you a full application which you can then edit to suit your needs.",
+	"Add row": "Menambahkan baris",
+	"Add %s": "Tambah %s",
+	"Edit row": "Sunting baris",
+	"Edit %s": "Sunting %s",
+	"No errors reported": "Tidak ada kesalahan yang dilaporkan",
+	"Everything is going extremely well.": "Semuanya berjalan dengan sangat baik.",
+	"Filename": "Nama file",
+	"Size (KiB)": "Ukuran (KiB)",
+	"Media type": "Tipe media",
+	"Role to access": "Peran untuk mengakses",
+	"Link": "Tautan",
+	"Download": "Unduh",
+	"Upload file ": "Unggah data ",
+	"Minimum role for %s updated to %s": "Peran minimal untuk %s diperbarui ke %s",
+	"File %s deleted": "File %s dihapus",
+	"More...": "Lebih...",
+	"Quick Start": "Memulai cepat",
+	"Four different ways to get started using Saltcorn": "Empat cara berbeda untuk mulai menggunakan Saltcorn",
+	"Build": "Membangun",
+	"Start by creating the tables to hold your data": "Mulailah dengan membuat tabel untuk menyimpan data Anda",
+	"Create a table »": "Buat tabel »",
+	"When you have created the tables, you can create views so users can interact with the data.": "Setelah Anda membuat tabel, Anda bisa membuat tampilan sehingga pengguna bisa berinteraksi dengan data.",
+	"You can also start by creating a page.": "Anda juga bisa memulai dengan membuat halaman.",
+	"Create a page »": "Buat halaman »",
+	"Upload": "Unggah",
+	"You can skip creating a table by hand by uploading a CSV file from a spreadsheet.": "Anda dapat melewati pembuatan tabel secara manual dengan mengunggah file CSV dari spreadsheet.",
+	"Create table with CSV upload": "Buat tabel dengan unggahan CSV",
+	"If you have a backup from a previous Saltcorn instance, you can also restore it.": "Jika Anda memiliki cadangan dari instance Saltcorn sebelumnya, Anda juga dapat memulihkannya.",
+	"Install pack": "Instal paket",
+	"Instead of building, get up and running in no time with packs": "Daripada membangun, bangun dan jalankan dalam waktu singkat dengan paket",
+	"Packs are collections of tables, views and plugins that give you a full application which you can then edit to suit your needs.": "Paket adalah kumpulan tabel, tampilan, dan plugin yang memberi Anda aplikasi lengkap yang kemudian dapat Anda edit sesuai kebutuhan Anda.",
 	"Name": "Name",
 	"Description": "Description",
 	"Go to pack store »": "Go to pack store »",
